--- a/.ebextensions/00log_file_install.config
+++ b/.ebextensions/00log_file_install.config
@@ -1,12 +1,11 @@
-packages: 
-  yum:
-    libmemcached: [] 
-    ruby-devel: []
-    gcc: []
-  rpm:
-    epel: http://download.fedoraproject.org/pub/epel/5/i386/epel-release-5-4.noarch.rpm
-  rubygems: 
-    chef: '0.10.2'
+files: 
+  "/home/ec2-user/myfile2" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      # this is my file
+      # with content
 
 files:
   "/opt/elasticbeanstalk/tasks/bundlelogs.d/01-sample-app.conf":
