--- a/.ebextensions/00log_file_install.config
+++ b/.ebextensions/00log_file_install.config
@@ -1,11 +1,7 @@
-files: 
-  "/home/ec2-user/myfile2" :
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      # this is my file
-      # with content
+packages:
+  yum:
+    mlocate: []
+
 
 files:
   "/opt/elasticbeanstalk/tasks/bundlelogs.d/01-sample-app.conf":
